# python-cicd

./: .gitignore  README.md  hello.py  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yml
src/python_cicd/: __init__.py  add.py  slap_that_like_button.py
tests/python_cicd/: conftest.py  test_init.py  test_slapping.py
