[project]
name = "python-cicd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Albert Sodel", email = "sodelalbert@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
]

[project.scripts]
python-cicd = "python_cicd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pyright>=1.1.390",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.4",
]

[tool.mypy]
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-v --durations=0 -n auto"
testpaths = [
    "tests"
]
